[package]
name = "gpt3-jeopardy"
version = "0.1.0"
authors = ["Chance Linz <clinz.dev@gmail.com>"]
edition = "2018"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3"
tokio = { version = "1.12.0", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "3.1.18", features = ["derive"] }